deploy/yeemathong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata:
  name: "yeemathong-dev-ingress"
  namespace: "yeemathong"
  annotations:
    kubernetes.io/ingress.class: "kong"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: "yeemathong-dev-tls"
      hosts:
        - "yee-mat-hong.hongik.dev"
  rules:
  - host: "yee-mat-hong.hongik.dev"
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: yeemathong-api-service
              port:
                number: 8000
